# causalconsistency

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Prompt.txt  README.md  conda-lock.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  configuration.md  index.md  metrics.md  model_card.md  pyro_training.md  serving.md  training.md
examples/: notebook_intro.ipynb
examples/scripts/: generate_synth.py  multi_class_config.yaml  train_config.yaml  train_synth.sh
src/causal_consistency_nn/: __init__.py  __main__.py  config.py  eval.py  fastapi_app.py  metrics.py  serve.py  torchserve_handler.py  train.py
src/causal_consistency_nn/data/: __init__.py  dummy.py  instrumental.py  synthetic.py
src/causal_consistency_nn/model/: __init__.py  backbone.py  causal_model.py  heads.py  lightning_loop.py  losses.py  pyro_model.py  pyro_svi.py  pyro_wgivenx.py  pyro_xgivenyz.py  pyro_ygivenxz.py  pyro_zgivenxy.py  semi_loop.py
src/causal_consistency_nn/utils/: logging.py
tests/: test_backbone.py  test_cli_all_overrides.py  test_config.py  test_dummy.py  test_fastapi_app.py  test_heads.py  test_instrumental.py  test_instrumental_training.py  test_integration_missing_y.py  test_lightning_loop.py  test_logging.py  test_losses.py  test_main.py  test_metrics.py  test_pyro_svi.py  test_semi_loop.py  test_serve.py  test_synthetic.py  test_torchserve_handler.py  test_train_cli.py  test_train_end_to_end.py  test_yaml_dependency.py
