[tool.poetry]
name = "causal_consistency_nn"
version = "0.1.0"
description = "Neural network enforcing causal consistency X -> Y -> Z"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "causal_consistency_nn", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.7.1"
pyro-ppl = "1.9.1"
pydantic = "^2.7"
pydantic-settings = "^2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.7"
ruff = "^0.4"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
