[tool.poetry]
name = "causal_consistency_nn"
version = "0.1.0"
description = "Neural network enforcing causal consistency X -> Y -> Z"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "causal_consistency_nn", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.7.1"
pyro-ppl = "1.9.1"
pydantic = "^2.7"
pydantic-settings = "^2.2"
pyyaml = "^6.0"
fastapi = "^0.111"
uvicorn = "^0.30"
tomli = {version = "^2.0", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.7"
ruff = "^0.4"

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = "/(docs|examples|tests/data)/"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["docs", "examples", "tests/data"]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
